WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
278283
[JSC] Not using PolymorphicAccess in Handler IC
https://bugs.webkit.org/show_bug.cgi?id=278283
Summary
[JSC] Not using PolymorphicAccess in Handler IC
Yusuke Suzuki
Reported
2024-08-17 17:53:49 PDT
...
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-08-17 17:53:59 PDT
<
rdar://problem/134159625
>
Yusuke Suzuki
Comment 2
2024-08-17 17:55:24 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/32351
EWS
Comment 3
2024-08-19 10:14:22 PDT
Committed
282431@main
(e3098206e15f): <
https://commits.webkit.org/282431@main
> Reviewed commits have been landed. Closing PR #32351 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug